<resources>
    <string name="app_name">Data Logger</string>
    <string name="file_download">File Download</string>
    <string name="action_settings">Settings</string>
    <string name="no_files_found">No Files Yet</string>
    <string name="start_logging">Start Logging</string>
    <string name="stop_logging">Stop Logging</string>
    <string name="download_file">Download Logfiles</string>
    <string name="no_files">Could Not Find Files</string>
    <string name="no_data">No Data Received</string>
    <string name="title_activity_maps">Map</string>
    <string name="mapView">View Map</string>
    <string name="viewDownloaded">View Downloaded Files</string>
    <string name="connectOBD">Connect OBDII Reader</string>
    <string name="selLog">Select Logfile</string>
    <string name="speed">Speed</string>
    <string name="mpg">MPG</string>
    <string name="toggleLaunch">Launch\nMarkers</string>
    <string name="toggleAggressive">Aggressive\nMarkers</string>
    <string name="toggleMpg">MPG\nMarkers</string>
</resources>
